# discord-bot-enterprise

./: .env.example  .gitignore  Dockerfile  README.md  claude.md  config.py  database.py  database_postgres.py  dev.md  docker-compose.yml  env_example.txt  env_local_example.txt  env_production_example.txt  import_test.py  koyeb.yaml  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_core_fixes.py  test_fixed_issues.py  test_fixes.py  test_mock_env.py  test_report_20250611_015550.json  test_report_20250611_015635.json  test_report_20250611_015712.json  test_report_20250611_021005.json  test_report_20250611_160434.json  validate_code.py  verify_installation.py  テスト結果_2025-06-11.md  実装タスク.md  要件定義.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
archive/: FIX_SUMMARY.md  IMPORT_ANALYSIS_REPORT.md  TEST_RESULTS_FINAL.md  main.py  run_test_safe.py  test_comprehensive.py  test_core_import_fix.py  test_import_fix.py
archive/core/: __init__.py  database.py  error_handling.py  logging.py  utils.py
core/: database.py  health_check.py  logging.py
deploy/: deploy_guide.md  koyeb_cli_setup_guide.md  koyeb_deploy.md  koyeb_supabase_guide.md  production_deploy_manual.md  supabase_cli_setup_guide.md
scripts/: docker_build.sh  koyeb_deploy.ps1  koyeb_deploy.sh  setup.ps1  setup.sh
supabase/: config.toml
tests/: TEST_ITEMS.md  conftest.py  run_all_tests.py  run_refactored_tests.py  test_attendance.py  test_basic.py  test_database_integration.py  test_infrastructure.py  test_performance.py  test_refactored_code.py
(+38 files in other folders)
